GearsetPOC/force-app/main/default/objects/MC_Calendar_Configurations__c/MC_Calendar_Configurations__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>MC Calendar Configurations</label>
</CustomObject>