GearsetPOC/force-app/main/default/objects/MC_Calendar_Configurations__c/fields/Config_Name__c.field-meta.xml
<CustomField>
    <fullName>Config_Name__c</fullName>
    <label>Config Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>