GearsetPOC/force-app/main/default/objects/MC_Calendar_Configurations__c/fields/Config_Order__c.field-meta.xml
<CustomField>
    <fullName>Config_Order__c</fullName>
    <label>Config Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>