GearsetPOC/force-app/main/default/objects/MC_Calendar_Configurations__c/fields/Config_Value__c.field-meta.xml
<CustomField>
    <fullName>Config_Value__c</fullName>
    <label>Config Value</label>
    <length>200</length>
    <type>Text</type>
</CustomField>